# node-deployment

./: .gitignore  .pre-commit-config.yaml  0_setup.sh  LICENSE  README.md  pyproject.toml  resolve-deps.sh  setup.sh  values.yaml  values_min.yaml
flame/: 0_setup.sh  Chart.yaml  dev-values.yaml  helm.yaml  localhost-values.yaml  values.yaml  values_min.yaml
flame/charts/message-broker/: Chart.yaml
flame/charts/node-hub-api-adapter/: Chart.yaml  README.md  values.yaml
flame/charts/node-message-broker/: values.yaml
flame/charts/node-pod-orchestration/: Chart.yaml
flame/charts/node-ui/: values.yaml
flame/charts/result-service/: Chart.yaml  values.yaml
flame/templates/: _helpers.tpl  additional-certs-configmap.yaml  flame-keycloak-realm-configmap.yaml  hub-auth-secret.yml  keycloak-admin-secret.yaml  private-key-secret.yaml
keycloak/: values.yaml
keycloak/templates/: configmap-env-vars.yaml  ingress.yaml  tls-secret.yaml
node-data-store/helm/: Chart.yaml  values.yaml
node-hub-api-adapter/: .env.template  README.md  gateway-deployment.yaml  gateway-service.yaml  hub-adapter-deployment.yaml  hub-adapter-service.yaml
node-kong/: setup.sh  values.yaml
node-message-broker/helm/: Chart.yaml  values.yaml
node-result-service/: .env.template  minio-deployment.yaml  minio-service.yaml  node-result-deployment.yaml  node-result-service.yaml
node-result-service/helm/: README.md
node-ui/: values.yaml
node-ui/helm/: values.yaml
node-ui/templates/: _helpers.tpl  node-ui-deployment.yaml  node-ui-ingress.yaml
project/: main.py
tests/: test_main.py
(+90 files in other folders)
